force-app/main/default/objects/Ghost_Coaching_Event_Section_Score__c/Ghost_Coaching_Event_Section_Score__c.object-meta.xml
<CustomObject>
    <description>Section-level scores per coaching event for competency trend reporting.</description>
    <label>Coaching Section Score</label>
    <nameField>
        <displayFormat>CSS-{00000}</displayFormat>
        <label>Section Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Section Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>