force-app/main/default/objects/Ghost_Coaching_Event_Section_Score__c/fields/Employee_Score__c.field-meta.xml
<CustomField>
    <fullName>Employee_Score__c</fullName>
    <label>Rep Score (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>