force-app/main/default/objects/Ghost_Coaching_Event_Section_Score__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Coaching event end date for trend reporting.</description>
    <formula>Coaching_Event__r.Event_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>