force-app/main/default/objects/Ghost_Coaching_Event_Section_Score__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>